--- a/index.html
+++ b/index.html
@@ -4,7 +4,303 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Hot Gadget | Techie Heart</title>
+
+    <!-- Font Awesome -->
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+    />
+    <!-- Bootstrap CSS -->
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+    />
+    <!-- Main CSS -->
+    <link rel="stylesheet" href="/css/style.css" />
   </head>
-  <body></body>
+
+  <body>
+    <!-- Header Start-->
+    <header>
+      <!-- Nav Start -->
+      <nav class="navbar navbar-expand-lg">
+        <div class="container">
+          <a href="#"><img class="navbar-brand" src="img/logo.png" alt="" /></a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Products</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">About Us</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link">Contact Us</a>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
+      <!-- Nav End -->
+
+      <!-- Carousel Start -->
+      <div
+        id="carousel"
+        class="carousel carousel-dark slide"
+        data-bs-ride="carousel"
+      >
+        <div class="carousel-indicators">
+          <button
+            type="button"
+            data-bs-target="#carousel"
+            data-bs-slide-to="0"
+            class="active"
+            aria-current="true"
+            aria-label="Slide 1"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carousel"
+            data-bs-slide-to="1"
+            aria-label="Slide 2"
+          ></button>
+          <button
+            type="button"
+            data-bs-target="#carousel"
+            data-bs-slide-to="2"
+            aria-label="Slide 3"
+          ></button>
+        </div>
+        <div
+          class="carousel-inner"
+          style="background-image: url('img/bg-img.png')"
+        >
+          <div class="carousel-item active">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-6 col-12">
+                  <div class="promo__content">
+                    <h2>Mackbook Pro</h2>
+                    <p>
+                      Contrary to popular belief, Lorem Ipsum is not simply
+                      random text. It has roots in a piece of classical Latin
+                      literature.
+                    </p>
+                    <button class="btn btn-dark">
+                      Buy Now <i class="fa-solid fa-arrow-right"></i>
+                    </button>
+                  </div>
+                </div>
+
+                <div class="col-md-6 col-12">
+                  <div class="promo__img">
+                    <img src="img/promo-1.png" alt="" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-6 col-12">
+                  <div class="promo__content">
+                    <h2>Mackbook Pro</h2>
+                    <p>
+                      Contrary to popular belief, Lorem Ipsum is not simply
+                      random text. It has roots in a piece of classical Latin
+                      literature.
+                    </p>
+                    <button class="btn btn-dark">
+                      Buy Now <i class="fa-solid fa-arrow-right"></i>
+                    </button>
+                  </div>
+                </div>
+
+                <div class="col-md-6 col-12">
+                  <div class="promo__img">
+                    <img src="img/promo-2.png" alt="" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="carousel-item">
+            <div class="container">
+              <div class="row">
+                <div class="col-md-6 col-12">
+                  <div class="promo__content">
+                    <h2>Mackbook Pro</h2>
+                    <p>
+                      Contrary to popular belief, Lorem Ipsum is not simply
+                      random text. It has roots in a piece of classical Latin
+                      literature.
+                    </p>
+                    <button class="btn btn-dark">
+                      Buy Now <i class="fa-solid fa-arrow-right"></i>
+                    </button>
+                  </div>
+                </div>
+
+                <div class="col-md-6 col-12">
+                  <div class="promo__img">
+                    <img src="img/promo-3.png" alt="" />
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- Carousel End -->
+    </header>
+    <!-- Header End -->
+    <!-- Product Phone Start -->
+    <section class="products__wrapper product__wrapper--phone">
+      <div class="container">
+        <div class="product__heading">
+          <h2>Smartphone</h2>
+          <a href="#"> See All</a>
+        </div>
+        <div class="row">
+          <div class="col-md-4 col-12">
+            <div class="card text-center">
+              <img src="img/phone-1.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">iPhone 11 Pro</h5>
+                <p class="card-text">
+                  Some quick zz text to build on the card title.
+                </p>
+                <h6>$999</h6>
+
+                <a href="#" class="btn btn-dark"
+                  >Buy Now <i class="fa-solid fa-arrow-right"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4 col-12">
+            <div class="card text-center">
+              <img src="img/phone-2.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Samsung Galaxy S22</h5>
+                <p class="card-text">
+                  Some quick zz text to build on the card title.
+                </p>
+                <h6>$799</h6>
+
+                <a href="#" class="btn btn-dark"
+                  >Buy Now <i class="fa-solid fa-arrow-right"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4 col-12">
+            <div class="card text-center">
+              <img src="img/phone-3.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Redmi Note 10 2022</h5>
+                <p class="card-text">
+                  Some quick zz text to build on the card title.
+                </p>
+
+                <h6>$699</h6>
+
+                <a href="#" class="btn btn-dark"
+                  >Buy Now <i class="fa-solid fa-arrow-right"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Product Phone End -->
+
+    <!-- Product Laptop Start -->
+
+    <section class="products__wrapper product__wrapper--laptop">
+      <div class="container">
+        <div class="product__heading">
+          <h2>Laptop</h2>
+          <a href="#"> See All</a>
+        </div>
+        <div class="row">
+          <div class="col-md-4 col-12">
+            <div class="card text-center">
+              <img src="img/product-1.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Asus VivoBook</h5>
+                <p class="card-text">
+                  Some quick zz text to build on the card title.
+                </p>
+                <h6>$999</h6>
+
+                <a href="#" class="btn btn-dark"
+                  >Buy Now <i class="fa-solid fa-arrow-right"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4 col-12">
+            <div class="card text-center">
+              <img src="img/product-2.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Razer Blade 15</h5>
+                <p class="card-text">
+                  Some quick zz text to build on the card title.
+                </p>
+                <h6>$2799</h6>
+
+                <a href="#" class="btn btn-dark"
+                  >Buy Now <i class="fa-solid fa-arrow-right"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+
+          <div class="col-md-4 col-12">
+            <div class="card text-center">
+              <img src="img/product-3.png" class="card-img-top" alt="..." />
+              <div class="card-body">
+                <h5 class="card-title">Xiaomi Mi Notebook</h5>
+                <p class="card-text">
+                  Some quick zz text to build on the card title.
+                </p>
+
+                <h6>$699</h6>
+
+                <a href="#" class="btn btn-dark"
+                  >Buy Now <i class="fa-solid fa-arrow-right"></i
+                ></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Product Laptop End -->
+
+    <!-- Bootstrap Scripts -->
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"></script>
+  </body>
 </html>
