--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <!-- Header Start-->
     <header>
       <!-- Nav Start -->
-      <nav class="navbar navbar-expand-lg">
+      <nav class="navbar sticky-top navbar-expand-lg">
         <div class="container">
           <a href="#"><img class="navbar-brand" src="img/logo.png" alt="" /></a>
           <button
@@ -95,7 +95,7 @@
               <div class="row">
                 <div class="col-md-6 col-12">
                   <div class="promo__content">
-                    <h2>Mackbook Pro</h2>
+                    <h2 class="fade-in-left">Mackbook Pro</h2>
                     <p>
                       Contrary to popular belief, Lorem Ipsum is not simply
                       random text. It has roots in a piece of classical Latin
@@ -170,6 +170,7 @@
       <!-- Carousel End -->
     </header>
     <!-- Header End -->
+
     <!-- Product Phone Start -->
     <section class="products__wrapper product__wrapper--phone">
       <div class="container">
@@ -299,6 +300,49 @@
     </section>
     <!-- Product Laptop End -->
 
+    <!-- Category Start -->
+    <section class="category">
+      <div class="container">
+        <h2 class="text-center">Categories</h2>
+        <hr />
+        <div class="row py-5">
+          <div class="col-md-3">
+            <div class="card card__single">
+              <img src="img/bag.png" alt="" class="card-img-top img-fluid" />
+              <div class="card-body">
+                <h5 class="card-title text-center">Bag</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-3">
+            <div class="card card__double">
+              <img
+                src="img/perfume.png"
+                alt=""
+                class="card-img-top img-fluid"
+              />
+              <div class="card-body">
+                <h5 class="card-title text-center">Beauty</h5>
+              </div>
+            </div>
+            <div class="card card__third">
+              <img src="img/shoe.png" alt="" class="card-img-top img-fluid" />
+              <div class="card-body">
+                <h5 class="card-title text-center">Shoes</h5>
+              </div>
+            </div>
+          </div>
+          <div class="col-md-6">
+            <img
+              src="img/pale-order.png"
+              alt=""
+              class="img-fluid card__promo"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- Category End -->
     <!-- Bootstrap Scripts -->
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.5/dist/umd/popper.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.min.js"></script>
